김지광 ,RecyclerView.Adapter RecyclerView.fragment class 생성 viewpager에 필요한 xml 파일 추가.

--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -62,7 +62,8 @@
             android:textColor="#ffffff"
             android:id="@+id/tV_drawer_setting"
             android:layout_marginTop="368dp"
-            android:layout_marginLeft="44dp">
+            android:layout_marginLeft="44dp"
+            android:onClick="OnClick">
         </TextView>
 
         <LinearLayout
