최승구 Drawer 수정

--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -26,7 +26,7 @@
             >
         </TextView>
 
-        <!--
+
 
          <LinearLayout
              android:layout_width="match_parent"
@@ -42,7 +42,7 @@
              android:id="@+id/tv_drawer_start"
              android:layout_marginTop="298dp"
              android:layout_marginLeft="44dp"
-             android:onClick="OnClick">
+             >
          </TextView>
 
          <LinearLayout
@@ -56,9 +56,9 @@
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:text="작성하기"
+             android:text="Contact US"
              android:textColor="#ffffff"
-             android:id="@+id/tV_drawer_setting"
+             android:id="@+id/tV_drawer_contact"
              android:layout_marginTop="368dp"
              android:layout_marginLeft="44dp">
          </TextView>
@@ -67,11 +67,10 @@
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#80ffffff"
-             android:layout_mar="#80ffffff"
              android:layout_marginTop="410dp">
          </LinearLayout>
 
-         -->
+
 
 
 
